--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
 pip
 wheel
 fastapi~=0.99.1
-uvicorn
+python-multipart~=0.0.6
+uvicorn~=0.22.0
 pydantic~=1.10.11
--i https://pypi.anaconda.org/intel/simple --extra-index-url https://pypi.org/simple numpy
-Pillow
-dlib
-opencv-python-headless
-requests
-torch
+numpy==1.24.*
+Pillow~=10.0.0
+requests~=2.31.0
+torch~=2.0.1
+torchvision~=0.15.2
+ninja~=1.11.1
+pytorch3d
+scipy~=1.11.1
+openvino-dev==2023.0.1
+numba~=0.57.1
+
+# dlib
+# onnxruntime
+# codon-jit      ## TODO: investigate using https://docs.exaloop.io/codon/
+# "git+https://github.com/facebookresearch/pytorch3d.git@stable"
+# TODO: Use Intel numpy on Intel hardware
+# -i https://pypi.anaconda.org/intel/simple --extra-index-url https://pypi.org/simple numpy
+# opencv-python-headless  # Comes with openvino
+# matplotlib
+# pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5
