--- a/.gitattributes
+++ b/.gitattributes
@@ -1,24 +1,19 @@
 # Default behaviour to automatically normalize line endings.
 * text=auto
-
 # Use lfs for models
 *.dat filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.mat filter=lfs diff=lfs merge=lfs -text
-
 # And handle them as binary
 *.dat binary
 *.pt binary
 *.pth binary
-
 # Ensure lf
 *.sh text eol=lf
 *.py text eol=lf
 *.txt text eol=lf
 *.http text eol=lf
-
-
 # More lfs stuff
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.arrow filter=lfs diff=lfs merge=lfs -text
@@ -47,3 +42,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zstandard filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+assets/** filter=lfs diff=lfs merge=lfs -text
