--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -29,6 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest httpx
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        python -m pip install pip install "git+https://github.com/facebookresearch/pytorch3d.git@stable"
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
