--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -16,10 +16,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-      with:
-          lfs: true
-    - name: Checkout LFS objects
-      run: git lfs checkout
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
@@ -30,7 +26,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest httpx
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -m pip install pip install "git+https://github.com/facebookresearch/pytorch3d.git@stable"
+        python -m pip install "git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5"
+    - name: Download models
+      run: |
+        python common/asset_downloader.py
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
