--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -31,7 +31,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest httpx
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        python -m pip install "git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5"
+        # Try to install pytorch3d from whl previously compiled and cached
+        # Otherwise install from git
+        find ~/.cache/pip/wheels -type f -name pytorch3d-0.7.4-cp310-cp310-linux_x86_64.whl -exec pip install {} \; || \
+          python -m pip install "git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5"
     - name: Cache assets
       uses: actions/cache@v3
       with:
