--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,23 @@ Pillow~=10.0.0
 requests~=2.31.0
 ninja~=1.11.1
 scipy~=1.11.1
-openvino-dev==2023.0.1
-numba~=0.57.1
---extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
 md5checker~=0.2.1
+numba~=0.57.1
+
+# OpenVino - only for x64. On aarch64 we will use docker installation for it
+openvino-dev==2023.0.1; platform_machine != 'aarch64'
+# We should also install opencv manually since it doesn't come with OpenVino aarch64 download for docker
+opencv-python-headless==4.8.0.74; platform_machine == 'aarch64'
+
+# PyTorch on aarch64
+torch==2.0.1; platform_machine == 'aarch64'
+torchvision==0.15.2; platform_machine == 'aarch64'
+
+# PyTorch on x64
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1+cpu; platform_machine != 'aarch64'
+torchvision==0.15.2+cpu; platform_machine != 'aarch64'
+
 
 # dlib
 # onnxruntime
@@ -26,3 +37,5 @@ md5checker~=0.2.1
 # matplotlib
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable
+
+
