--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ opencv-python-headless~=4.8.0.74
 
 # PyTorch on aarch64
 torch==2.0.1; platform_machine == 'aarch64'
-torchvision==0.15.2; platform_machine == 'aarch64'
+torchvision; platform_machine == 'aarch64'
 
 # PyTorch on x64
 --extra-index-url https://download.pytorch.org/whl/cpu
