--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ torchvision; platform_machine == 'aarch64'
 # PyTorch on x64
 --extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.0.1+cpu; platform_machine != 'aarch64'
-torchvision~=0.15.2+cpu; platform_machine != 'aarch64'
+torchvision==0.15.2+cpu; platform_machine != 'aarch64'
 
 
 # dlib
