Docker containers: Stop on sigterm

--- a/docker/Dockerfile-x64
+++ b/docker/Dockerfile-x64
@@ -48,6 +48,7 @@ ENV APP_MODULE=${APP_MODULE}
 ENV HOST=${HOST}
 ENV PORT=${PORT}
 
+STOPSIGNAL SIGTERM
 EXPOSE ${PORT}
 
 ENTRYPOINT uvicorn ${APP_MODULE} --proxy-headers --port ${PORT} --host ${HOST}
