--- a/docker/Dockerfile-aarch64-ampere
+++ b/docker/Dockerfile-aarch64-ampere
@@ -80,6 +80,7 @@ ENV APP_MODULE=${APP_MODULE}
 ENV HOST=${HOST}
 ENV PORT=${PORT}
 
+STOPSIGNAL SIGTERM
 EXPOSE ${PORT}
 
 ENTRYPOINT /.aio_init/aio_init; uvicorn ${APP_MODULE} --proxy-headers --port ${PORT} --host ${HOST}
