--- a/docker/Dockerfile-aarch64-ampere
+++ b/docker/Dockerfile-aarch64-ampere
@@ -16,7 +16,7 @@ RUN apt-get update && \
 WORKDIR /app
 
 COPY requirements.txt .
-RUN pip install  --upgrade pip && pip install --no-cache-dir -r requirements.txt
+RUN pip install  --upgrade pip pip wheel setuptools && pip install --no-cache-dir -r requirements.txt
 COPY . .
 RUN python3 ./common/asset_downloader.py
 
