--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ onnxruntime~=1.15.1; platform_machine != 'aarch64'
 requests-cache~=1.1.0
 opencv-python-headless~=4.8.0.74
 #nms
+# starlette-admin #TODO: Add admin for API keys
 
 facexlib>=0.2.5
 gfpgan>=1.3.7
@@ -29,7 +30,7 @@ realesrgan>=0.2.5
 # We should also install opencv manually since it doesn't come with OpenVino aarch64 download for docker
 
 # PyTorch on aarch64
-torch==2.0.1; platform_machine == 'aarch64'
+# torch==2.0.1; platform_machine == 'aarch64'
 torchvision; platform_machine == 'aarch64'
 
 # PyTorch on x64
