--- a/docker/Dockerfile-aarch64-ampere
+++ b/docker/Dockerfile-aarch64-ampere
@@ -90,6 +90,8 @@ ENV APP_MODULE=${APP_MODULE}
 ENV HOST=${HOST}
 ENV PORT=${PORT}
 
+ENV API_KEYS=to_override,
+
 STOPSIGNAL SIGTERM
 EXPOSE ${PORT}
 
