--- a/docker/Dockerfile-aarch64-ampere
+++ b/docker/Dockerfile-aarch64-ampere
@@ -1,4 +1,4 @@
-FROM amperecomputingai/amperecomputingai/pytorch:1.8.0 as base
+FROM amperecomputingai/pytorch:1.8.0 as base
 
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
@@ -66,7 +66,7 @@ RUN pip install  --find-links /var/cache/pip/ pytorch3d
   #sudo docker rm ort-aio || true
 # Then uncomment the line below
 
-ADD /tmp/export/onnxruntime.tar.gz /
+ADD onnxruntime.tar.gz /
 
 ARG PORT=8080
 ARG HOST=0.0.0.0
