Add keys from server env

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -20,10 +20,10 @@ jobs:
             tar cfzv /export/onnxruntime.tar.gz \
             /usr/local/lib/python3.10/dist-packages/onnxruntime-1.14.1+aio9c3c0.dist-info/ \
             /usr/local/lib/python3.10/dist-packages/onnxruntime/'
-          
+          cp /srv/atfal-ai/.env .
           docker build -f docker/Dockerfile-aarch64-ampere . -tatfal-ai
-          
-          rm -fr onnxruntime.tar.gz
+          rm -f .env
+          rm -f onnxruntime.tar.gz
 
   restart-services:
      name: Restart Services
