--- a/requirements.txt
+++ b/requirements.txt
@@ -16,8 +16,10 @@ numba~=0.57.1
 onnxruntime~=1.15.1; platform_machine != 'aarch64'
 requests-cache~=1.1.0
 opencv-python-headless~=4.8.0.74
+starlette-admin
+SQLAlchemy~=2.0.21
 #nms
-# starlette-admin #TODO: Add admin for API keys
+
 
 facexlib>=0.2.5
 gfpgan>=1.3.7
@@ -49,5 +51,4 @@ torchvision==0.15.2+cpu; platform_machine != 'aarch64'
 # matplotlib
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable
-
 
