--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,32 @@
 pip
 wheel
-fastapi~=0.103.2
+fastapi~=0.104.1
 python-multipart~=0.0.6
-uvicorn~=0.22.0
-pydantic-settings~=2.0.3
-pydantic~=2.4.2
-numpy==1.24.*
+uvicorn[standard]~=0.24.0
+pydantic-settings~=2.1.0
+pydantic~=2.5.2
+numpy~=1.24.2
 Pillow~=10.0.0
 requests~=2.31.0
 ninja~=1.11.1
 scipy~=1.11.1; platform_machine != 'aarch64'
 scipy; platform_machine == 'aarch64'
 md5checker~=0.2.1
-numba~=0.57.1
-onnxruntime~=1.15.1; platform_machine != 'aarch64'
-requests-cache~=1.1.0
-opencv-python-headless~=4.8.0.74
+onnxruntime~=1.16.3; platform_machine != 'aarch64'
+requests-cache~=1.1.1
+opencv-python-headless~=4.8.1.78
+starlette
 starlette-admin
 SQLAlchemy~=2.0.21
 deepface
+numba   # Don't version - leave it up to numpy
+loguru
 #nms
 
 
 facexlib>=0.2.5
-gfpgan>=1.3.7
-realesrgan>=0.2.5
+gfpgan~=1.3.8
+realesrgan~=0.3.0
 
 
 # We no longer do openvino. Only onnx and pytorch with the hope to move fully to onnx
