--- a/docker/Dockerfile-aarch64-ampere
+++ b/docker/Dockerfile-aarch64-ampere
@@ -16,8 +16,8 @@ RUN apt-get update && \
  && rm -rf /var/lib/apt/lists/*
 
 COPY app /app
-COPY requirements.txt /tmp
-RUN pip install  --upgrade pip pip wheel setuptools && pip install --no-cache-dir -r /tmp/requirements.txt
+COPY requirements.txt .
+RUN pip install  --upgrade pip pip wheel setuptools && pip install --no-cache-dir -r requirements.txt
 
 WORKDIR /app
 RUN cd /app && python3 ./common/asset_downloader.py
