--- a/docker/Dockerfile-x64
+++ b/docker/Dockerfile-x64
@@ -9,9 +9,9 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && apt-get install -y \
     libglib2.0-0 \
  && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /app
+COPY app /app
 
-COPY . .
+WORKDIR /app
 
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt && \
       pip install --no-cache-dir git+https://github.com/facebookresearch/pytorch3d.git@297020a4b1d7492190cb4a909cafbd2c81a12cb5
