--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ md5checker~=0.2.1
 onnxruntime~=1.16.3; platform_machine != 'aarch64'
 requests-cache~=1.1.1
 opencv-python-headless~=4.8.1.78
+uvloop; platform_machine == 'aarch64'
 starlette
 starlette-admin
 SQLAlchemy~=2.0.21
